# LLMProject

./: README.md
.devcontainer/: devcontainer.json
LLMProject/: Dockerfile  README.md  llm_brain.py  pyproject.toml  requirements.txt
LLMProject/doc/: API_REFERENCE.md  INSTALLATION_GUIDE.md  README.md
LLMProject/src/: app.py  doctors_voice.py  llm_brain.py  patient_voice.py  requirements.txt  utils.py
LLMProject/test/: test_doctors_voice.py  test_llm_brain.py  test_patient_voice.py
