[project]
name = "llmproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.34.0",
    "groq==0.15.0 ; python_full_version >= '3.8'",
    "gtts>=2.5.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "speechrecognition>=3.14.5",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
